--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,6 @@ tags
 tags.*
 typescript
 
-/fundamentals-1/treasure
-/fundamentals-2/c-sizer
-/fundamentals-2/c-sizer-sol
+/fundamentals1x/treasure
+/fundamentals2x/c-sizer
+/fundamentals2x/c-sizer-sol
